--- a/package.json
+++ b/package.json
@@ -18,9 +18,9 @@
     "@dcloudio/uni-components": "3.0.0-alpha-5000120260205002",
     "@dcloudio/uni-h5": "3.0.0-alpha-5000120260205002",
     "@dcloudio/uni-mp-weixin": "3.0.0-alpha-5000120260205002",
-    "vue": "^3.5.13",
+    "echarts": "^5.5.1",
     "pinia": "^2.3.0",
-    "echarts": "^5.5.1"
+    "vue": "^3.5.13"
   },
   "devDependencies": {
     "@dcloudio/types": "^3.4.12",
